@@ -1,0 +1,64 @@
+#ifndef PSANA_FLI_DDL_H
+#define PSANA_FLI_DDL_H 1
+
+// *** Do not edit this file, it is auto-generated ***
+
+#include <vector>
+#include "ndarray/ndarray.h"
+#include "pdsdata/xtc/TypeId.hh"
+namespace Psana {
+namespace Fli {
+
+/** @class ConfigV1
+
+  
+*/
+
+
+class ConfigV1 {
+public:
+  enum { TypeId = Pds::TypeId::Id_FliConfig /**< XTC type ID value (from Pds::TypeId class) */ };
+  enum { Version = 1 /**< XTC type version number */ };
+  virtual ~ConfigV1();
+  virtual uint32_t width() const = 0;
+  virtual uint32_t height() const = 0;
+  virtual uint32_t orgX() const = 0;
+  virtual uint32_t orgY() const = 0;
+  virtual uint32_t binX() const = 0;
+  virtual uint32_t binY() const = 0;
+  virtual float exposureTime() const = 0;
+  virtual float coolingTemp() const = 0;
+  virtual uint8_t gainIndex() const = 0;
+  virtual uint8_t readoutSpeedIndex() const = 0;
+  virtual uint16_t exposureEventCode() const = 0;
+  virtual uint32_t numDelayShots() const = 0;
+  /** Total size in bytes of the Frame object */
+  virtual uint32_t frameSize() const = 0;
+  /** calculate frame X size in pixels based on the current ROI and binning settings */
+  virtual uint32_t numPixelsX() const = 0;
+  /** calculate frame Y size in pixels based on the current ROI and binning settings */
+  virtual uint32_t numPixelsY() const = 0;
+  /** calculate total frame size in pixels based on the current ROI and binning settings */
+  virtual uint32_t numPixels() const = 0;
+};
+
+/** @class FrameV1
+
+  
+*/
+
+class ConfigV1;
+
+class FrameV1 {
+public:
+  enum { TypeId = Pds::TypeId::Id_FliFrame /**< XTC type ID value (from Pds::TypeId class) */ };
+  enum { Version = 1 /**< XTC type version number */ };
+  virtual ~FrameV1();
+  virtual uint32_t shotIdStart() const = 0;
+  virtual float readoutTime() const = 0;
+  virtual float temperature() const = 0;
+  virtual ndarray<uint16_t, 2> data() const = 0;
+};
+} // namespace Fli
+} // namespace Psana
+#endif // PSANA_FLI_DDL_H
