@@ -74,6 +74,39 @@ public:
   virtual uint32_t numPixels() const = 0;
 };
 
+/** @class ConfigV3
+
+  
+*/
+
+
+class ConfigV3 {
+public:
+  enum { TypeId = Pds::TypeId::Id_PrincetonConfig /**< XTC type ID value (from Pds::TypeId class) */ };
+  enum { Version = 3 /**< XTC type version number */ };
+  virtual ~ConfigV3();
+  virtual uint32_t width() const = 0;
+  virtual uint32_t height() const = 0;
+  virtual uint32_t orgX() const = 0;
+  virtual uint32_t orgY() const = 0;
+  virtual uint32_t binX() const = 0;
+  virtual uint32_t binY() const = 0;
+  virtual float exposureTime() const = 0;
+  virtual float coolingTemp() const = 0;
+  virtual uint8_t gainIndex() const = 0;
+  virtual uint8_t readoutSpeedIndex() const = 0;
+  virtual uint16_t exposureEventCode() const = 0;
+  virtual uint32_t numDelayShots() const = 0;
+  /** Total size in bytes of the Frame object */
+  virtual uint32_t frameSize() const = 0;
+  /** calculate frame X size in pixels based on the current ROI and binning settings */
+  virtual uint32_t numPixelsX() const = 0;
+  /** calculate frame Y size in pixels based on the current ROI and binning settings */
+  virtual uint32_t numPixelsY() const = 0;
+  /** calculate total frame size in pixels based on the current ROI and binning settings */
+  virtual uint32_t numPixels() const = 0;
+};
+
 /** @class FrameV1
 
   
@@ -81,6 +114,7 @@ public:
 
 class ConfigV1;
 class ConfigV2;
+class ConfigV3;
 
 class FrameV1 {
 public:
