@@ -2,20 +2,14 @@
 // *** Do not edit this file, it is auto-generated ***
 
 #include <cstddef>
-#include "psddl_psana/princeton.ddl.h"
+#include "psddl_psana/fli.ddl.h"
 namespace Psana {
-namespace Princeton {
+namespace Fli {
 
 ConfigV1::~ConfigV1() {}
 
 
-ConfigV2::~ConfigV2() {}
-
-
-ConfigV3::~ConfigV3() {}
-
-
 FrameV1::~FrameV1() {}
 
-} // namespace Princeton
+} // namespace Fli
 } // namespace Psana
