@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-01
+2012-05-03 Andy Salnikov
+- upgrading to pdsdata V03-06-00
+- regenerate whole thing from psddldata V00-03-01
+
 Tag: V00-03-00
 2012-05-02 Andy Salnikov
 - regenerate whole thing from psddldata V00-03-00 with psddl V00-02-01
